--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,6 @@
   --color-background: hsl(var(--background));
   --color-foreground: hsl(var(--foreground));
 
-  /* --color-primary: #113440; */
-  --background-color: var(--about-me)
-  
   --color-primary: hsl(var(--primary));
   --color-primary-foreground: hsl(var(--primary-foreground));
 
@@ -64,18 +61,18 @@
     }
     to {
       opacity: 1;
-      transform: translateX(0)
+      transform: translateX(0);
     }
   }
 
-    @keyframes fade-left {
+  @keyframes fade-left {
     from {
       opacity: 0;
       transform: translateX(40px);
     }
     to {
       opacity: 1;
-      transform: translateX(0)
+      transform: translateX(0);
     }
   }
 }
@@ -84,7 +81,6 @@
   :root {
     --foreground: 213 31% 91%;
     --card: 0 0% 100%;
-    --about-me: #181E1E;
     --primary: #2e2e2e;
     --primary-foreground: 210 40% 98%;
 
@@ -98,7 +94,7 @@
   body {
     @apply bg-background text-foreground transition-colors duration-300;
     font-feature-settings: "rlig" 1, "calt" 1;
-    background-color: #1C102F;
+    background-color: #00172a;
   }
 }
 
@@ -160,10 +156,10 @@
 
  */
 
- .glass-tile {
-  @apply  backdrop-blur-md shadow-lg;
+.glass-tile {
+  @apply backdrop-blur-md shadow-lg;
 }
- @utility card-hover {
+@utility card-hover {
   @apply transition-transform duration-300 hover:scale-[1.02] hover:shadow-lg;
 }
 
